--- a/main.css
+++ b/main.css
@@ -1,30 +1,39 @@
+*{padding:0;margin: 0;background: #fff;}
 .container {
-	width: 280px;
-	min-height: 100px;
-	max-height: 300px;
-	overflow-y: auto;
+	width: 550px;
+	
 	padding: 10px 5px;
 }
-
-table {
-	margin: 0 auto;
-	border-collapse: collapse;
-	text-align: center;
+.list{
+	overflow: hidden;
+	padding:20px;
+	width: 350px;
+	max-height: 400px;
+	overflow-y: auto;
 }
-
-table th {
-	padding: 8px 25px;
+.list li{
+	float: left;
+	list-style: none;
+    margin-bottom: 12px;
+    font-size: 14px;
+	cursor: pointer;
+	width: 50%;
 }
+.list li a{
+	color: #333;
+	text-decoration: none;
+	display: inline-block;
 
-table td {
-	padding: 8px 25px;
+	border: 1px solid #d9d9d9;
+	border-radius: 4px;
+	padding: 10px 15px;
+	color: #333;
 }
-
-tbody tr:hover {
-	background: #f5fafe;
+.list li:hover{
+	color: #40a9ff;
+    
 }
-
-.add {
-	text-align: center;
-	margin-top: 10px;
+.list li a:hover{
+	color: #40a9ff;
+	border-color: #40a9ff;
 }
